complete results descriptions

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -655,14 +655,14 @@ the  parellelization  of  the  evaluation  step  of  an  evolutinary  ajgorithm.
 Nevertheless,  the  difference  among  versions  and  problems   can   be   seen
 when  considering efficiency.
 
-\begin{figure}[htpb]
+\begin{figure}[H]%htpb]
 \begin{center}
 \includegraphics[width=0.5\textwidth]{images/EXP2_Efficiency_IPC6_SEQ_ELEVATORS_12_S96.pdf}
 \caption{Efficiency of \DAEYAHSP\ relative to the number of processors, on \ELEVATORS-12}
 \label{fig:exp2_efficiency_core_elevators_12_pop_96}\end{center}
 \end{figure}
 
-\begin{figure}[htpb]
+\begin{figure}[H]%htpb]
 \begin{center}
 \includegraphics[width=0.5\textwidth]{images/EXP2_Efficiency_IPC6_TEMPO_OPENSTACKS_17_S96.pdf}
 \caption{Efficiency of \DAEYAHSP\ relative to the number of processors, on \OPENSTACKS-17}
