--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -638,7 +638,7 @@ population sizes: 48, 1152, 2304, 3456, 4608, 5760.
 \begin{center}
   \includegraphics[width=0.45\textwidth]{images/EXP2_Speed_up_IPC6_TEMPO_OPENSTACKS_17_S96_nosm-static_sm_vs_dynamic.pdf}
   \caption{Speedup of \DAEYAHSP\ relative to the number of processors, on
-  \OPENSTACK-17, on the left version using separated memoization and a static
+  \OPENSTACKS-17, on the left version using separated memoization and a static
   parallelization scheme, on the right the version using shared-memoization and
   the dynamic parallelization scheme.}
 \label{fig:exp2_speedup_core_openstack_17_pop_96_nosm-static_vs_sm-dynamic}
@@ -651,7 +651,7 @@ every versions and every problem tested (see figure
 example on two versions).
 
 This observation meets the expected behaviour and is classical when  considering
-the  parellelization  of  the  evaluation  step  of  an  evolutinary  ajgorithm.
+the  parellelization  of  the  evaluation  step  of  an  evolutinary  algorithm.
 Nevertheless,  the  difference  among  versions  and  problems   can   be   seen
 when  considering efficiency.
 
