--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -671,8 +671,8 @@ when  considering efficiency.
 
  A first observation on figures
 \ref{fig:exp2_efficiency_core_elevators_12_pop_96} and
-\ref{fig:exp2_efficiency_core_openstacks_17_pop_96}  shows that for
-\ELEVATORS-12, shared memoization may perfrms better for larger population  size
+\ref{fig:exp2_efficiency_core_openstacks_17_pop_96}  shows that for the benchmark
+\ELEVATORS-12, shared memoization may performs better for larger population  size
 but that there is  no  difference  between  static  an  dynamic  parallelization
 schemes.  On  \OPENSTACKS-17,  the  dynamic  scheme  performs  slightly  better
 when used along with the shared memoization.
