--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -365,7 +365,7 @@ costs are flushed.
 For the parallel scheme, we experimented two strategies: a global memoization shared by all individual evaluations against a memoization local to each individual evaluation. 
 Results are presented in section \ref{section:results}.
 
-\paragraph{Parts that can Theoretically be Parallelized}
+\paragraph{Parts that can theoretically be parallelized}
 
 As shown in section \ref{section:previous-work}, heuristic search algorithms
 used in automated AI planners can be parallelized in many ways, although there
@@ -379,29 +379,12 @@ Applying variation operators can also be performed in parallel;
 and depending on the application, parallelism on variation operators or
 individual evaluation will have a different impact on the running time and
 utilization of the computational resources.
-% is the paragraph below still truth ?
-In \DAEX, the running time of
-applying the variation operators is negligible w.r.t. the running time required
-by the individual evaluations by an embedded planner, which is the reason why we
-only parallelized the latter.
-
-% Correctness of the \DAEYAHSP\ parallel release
-% Burns et al.:
-%Soundness: Soundness holds trivially because no solution is returned that does not pass the goal test.
-%Deadlock: There is only one lock in PBNF and the thread that currently holds it never attempts to acquire it a second time, so deadlock cannot arise.
-%Livelock:
-%Completeness This follows easily from liveness:
-
-% Wikipedia: 
-%A deadlock is a situation where in two or more competing actions are each waiting for the other to finish, and thus neither ever does.
-%A livelock is similar to a deadlock, except that the states of the processes involved in the livelock constantly change with regard to one another, none progressing. Livelock is a special case of resource starvation; the general definition only states that a specific process is not progressing.
-%A real-world example of livelock occurs when two people meet in a narrow corridor, and each tries to be polite by moving aside to let the other pass, but they end up swaying from side to side without making any progress because they both repeatedly move the same way at the same time.
-%Livelock is a risk with some algorithms that detect and recover from deadlock. If more than one process takes action, the deadlock detection algorithm can be repeatedly triggered. This can be avoided by ensuring that only one process (chosen randomly or by priority) takes action
-
+In \DAEX, the running time of applying the variation operators is negligible w.r.t. the running time required
+by the individual evaluations by an embedded planner, which is the reason why we only parallelized the latter.
 
 \subsection{Implementation}
 
-\paragraph{Locks, Thread-Safe \& Reentrant Subroutines}
+\paragraph{Locks, thread-Safe \& reentrant subroutines}
 
 Even if being very natural in the context of evolutionary algorithms,
 parallelizing individual evaluations in \DAEX\ requires to be carefully made in
@@ -512,7 +495,7 @@ that concurrent executions of \YAHSP\ do not use the same portions of the global
 memory.
 
 
-\paragraph{Specific Parallelization Issues}
+\paragraph{Specific parallelization issues}
 
 \DAEYAHSP\ evaluation step calls the \YAHSP\ solver several times on the same
 decomposition and thus uses several variables to keep the state of the
@@ -523,7 +506,7 @@ to achieve the re-entrancy is to define those variables as attributes of the
 decomposition itself, and not as attributes of the evaluation functor.
 
 
-\paragraph{Static and Dynamic Scheduling}
+\paragraph{Static and dynamic scheduling}
 
 \OPENMP\ lets the choice between static (the default) and dynamic task
 scheduling. In the static scheduling, a loop iterating through a set of
@@ -578,7 +561,7 @@ equivalent to several other problems. In the temporal case a maximum number of
 stacks is given and the goal is to find the plan with the minimum makespan,
 without violating the maximum number of stacks constraints.
 
-\paragraph{Algorithm Parameters}
+\paragraph{Algorithm parameters}
 All the experiments were done with the parameter set described in
 \cite{dae:icaps2010} except for the population size which varies depending on the experiment. The fixed evolution engine is a (popsize + $7 \times$ popsize)-ES: $n$ individuals generate $7 \times n$ offspring without selection.
 For all runs, the following steady-state stopping condition has been applied:
@@ -611,42 +594,26 @@ This experiment uses the same version of \DAEYAHSP\ as the one used for the
 International Planning Competition, in a similar experimental environment. The
 algorithm uses the shared memoization and a static parallelization scheme. It
 has 30 minutes to achieve its search, and performs a complete restart each
-time it is stucked after 50 generations without improvement. 11 runs
+time it is stucked after 50 generations without improvement, 11 runs
 being performed on the 48 available cores, for the following
 population sizes: 48, 1152, 2304, 3456, 4608, 5760. 
-
-
-%\paragraph{}
-
-% EXP3
-% Recording of the elapsed time in evaluation and variation step
-% --------------------------------------------------------------
-% we are using 48 cores
-% through the sizes of population: 48, 1152, 2304, 3456, 4608, 5760
-% we only make test on the version dae-sm (shared memoization)
-% we use as problems: elevator12
-% we repeat tests 11 times
-% and the used parallelization scheme is the static one
-
 
 \subsection{Results}
 \label{section:results}
 
-\paragraph{Speedup against Number of Processors}
+\paragraph{Speedup against the number of processors}
 
 \begin{figure}[htpb]
 \begin{center}
-  \includegraphics[width=0.45\textwidth]{images/EXP2_Speed_up_IPC6_TEMPO_OPENSTACKS_17_S96_nosm-static_sm_vs_dynamic.pdf}
-  \caption{Speedup of \DAEYAHSP\ relatively to the number of processors, on
-  \OPENSTACKS-17, on the left version using separated memoization and a static
-  parallelization scheme, on the right the version using shared-memoization and
-  the dynamic parallelization scheme.}
+\includegraphics[width=0.45\textwidth]{images/EXP2_Speed_up_IPC6_TEMPO_OPENSTACKS_17_S96_nosm-static_sm_vs_dynamic.pdf}
+\caption{Speedup of \DAEYAHSP\ relative to the number of processors, on \OPENSTACKS-17.
+On the left: with local memoization and the static parallelization scheme, on the right: with shared memoization and the dynamic parallelization scheme.}
 \label{fig:exp2_speedup_core_openstack_17_pop_96_nosm-static_vs_sm-dynamic}
 \end{center}
 \end{figure}
 
-Results shows that the speedup raise linearly with the number of processors, for
-every versions and every problem tested (see figure
+Results show that the speedup raises linearly with the number of processors, for
+every version and every problem tested (see figure
 \ref{fig:exp2_speedup_core_openstack_17_pop_96_nosm-static_vs_sm-dynamic} for an
 example on two versions).
 
@@ -658,14 +625,14 @@ when  considering efficiency.
 \begin{figure}[H]%htpb]
 \begin{center}
 \includegraphics[width=0.47\textwidth]{images/EXP2_Efficiency_IPC6_SEQ_ELEVATORS_12_S96.pdf}
-\caption{Efficiency of \DAEYAHSP\ relative to the number of processors, on \ELEVATORS-12}
+\caption{Efficiency of \DAEYAHSP\ relative to the number of processors, on \ELEVATORS-12.}
 \label{fig:exp2_efficiency_core_elevators_12_pop_96}\end{center}
 \end{figure}
 
 \begin{figure}[H]%htpb]
 \begin{center}
 \includegraphics[width=0.47\textwidth]{images/EXP2_Efficiency_IPC6_TEMPO_OPENSTACKS_17_S96.pdf}
-\caption{Efficiency of \DAEYAHSP\ relative to the number of processors, on \OPENSTACKS-17}
+\caption{Efficiency of \DAEYAHSP\ relative to the number of processors, on \OPENSTACKS-17.}
 \label{fig:exp2_efficiency_core_openstacks_17_pop_96}\end{center}
 \end{figure}
 
@@ -708,7 +675,7 @@ high variance to ensure that the  probability  to  find  better  solutions  will
 increase with restarts.
 
 
-\paragraph{Speedup against Population Size}
+\paragraph{Speedup against the population size}
 
 \begin{figure}[htpb]
 \subfigure[\ELEVATORS-12]{\includegraphics[width=0.23\textwidth]{images/EXP1_Efficiency_IPC6_SEQ_ELEVATORS_12_RESTART_dae-sm_STATIC_.pdf}}
