--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -750,13 +750,13 @@ dispersion and the hardness of  the  problem  solved  remains  to  be  explored.
 
 Our results show that the stopping criterion should be chosen  carefully,  along
 with the population size,  as  it  has  an  impact  on  the  dispersion  of  the
-distribution of computation times. Moreover, the population size may seamlessly
+computation times distribution. Moreover, the population size may seamlessly
 be    chosen    small,    in    order    to    increase    computation    speed.
 
 % Have to be changed regarding the new results
-The  dynamic  queue  mapping  management  of  threads  onto  cores   provide   a
+The  dynamic  queue  mapping  management  of  threads  onto  cores   provides   a
 significant improvement on a single  problem  instance,  when  combined  with  a
-shared memoization.  As it  bring  no  improvement  on  the  other  problem,  it
+shared memoization.  As it  brings  no  improvement  on  the  other  problem,  it
 may  be  prefered,  but  more  test  on  differents   domains   are   necessary.
 
 The implementation scheme presented here is very  simple,  but  works  extremely
